--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SHA | Merketing</title>
+  <title>KF | Marketing</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="icon" type="image/x-icon" href="/imkan.png">
+  <link rel="icon" type="image/x-icon" href="/kf-logo-favicon.png">
 </head>
 <body>
   <app-root></app-root>
